# python-command-pattern-demo

./: commandFactory.py  main.py  pyproject.toml
abstracts/: command.py
commands/: say_hello_person.py  say_hello_world.py
