[tool.poetry]
name = "python-command-pattern-demo"
version = "0.1.0"
description = ""
authors = ["Calvin Kamtoso <calvinkmts@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
